objects/EmailTemplateSelection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to store the templates names of case comment is added</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Unique_Name__c</fullName>
        <label>Template Unique Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EmailTemplateSelection</label>
</CustomObject>